--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                 <span class="pages__href">shares.html</span>
             </a>
         </li>
+        <li class="pages__item pages__item_red">
+            <a href="online.html" target="_blank">
+                <span class="pages__name">Онлайн-запись</span>
+                <span class="pages__href">online.html</span>
+            </a>
+        </li>
     </ul>
 </div>
 <style>
