--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -29,7 +29,7 @@
             <div class="header-address-block">
                 <div class="header-address">
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-                    <span>САНКТ-ПЕТЕРБУРГ,<br>СПАССКИЙ ПЕРЕУЛОК ДОМ 3</span>
+                    <span>САНКТ-ПЕТЕРБУРГ, СПАССКИЙ ПЕРЕУЛОК ДОМ 3</span>
                 </div>
                 <div class="header-time">
                     <div class="header-time-img">
