--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -55,6 +55,50 @@
         </div>
     </div>
 </header>
+<div class="blue-line-menu">
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="navbar-main">
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            УСЛУГИ
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Мужские стрижки</a></li>
+                            <li><a href="#">Женские стрижки</a></li>
+                            <li><a href="#">Окрашивание волос</a></li>
+                            <li><a href="#">Детские услуги</a></li>
+                            <li><a href="#">Маникюр</a></li>
+                            <li><a href="#">Педикюр</a></li>
+                            <li><a href="#">Эстетическая Косметология</a></li>
+                            <li><a href="#">Инъекционная косметология</a></li>
+                            <li><a href="#">Депиляция</a></li>
+                            <li><a href="#">Макияж</a></li>
+                            <li><a href="#">Татуаж - Перманентный макияж</a></li>
+                            <li><a href="#">Наращивание ресниц</a></li>
+                            <li><a href="#">Массаж</a></li>
+                            <li><a href="#">Пирсинг</a></li>
+                            <li><a href="#">Солярий</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">О САЛОНЕ</a></li>
+                    <li><a href="#">ЦЕНЫ</a></li>
+                    <li><a href="#">БЛОГ</a></li>
+                    <li><a href="#">АКЦИИ</a></li>
+                    <li><a href="#">МАСТЕРА</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
