--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -44,6 +44,9 @@
                 <div class="header-feedback-phone">
                     <a href="tel:88125702831"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 570-28-31</a>
                 </div>
+                <div class="header-feedback-phone">
+                    <a href="tel:88124082840"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 408-28-40</a>
+                </div>
                 <div class="header-feedback-mail">
                     <a href="mailto:salon.litsa@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> salon.litsa@gmail.com</a>
                 </div>
