--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -58,7 +58,7 @@
         </div>
     </div>
 </header>
-<div class="blue-line-menu">
+<div class="black-line-menu">
     <div class="container">
         <nav class="navbar navbar-default">
             <div class="navbar-header">
@@ -100,6 +100,17 @@
                 </ul>
             </div>
         </nav>
+    </div>
+</div>
+<div class="owl-carousel">
+    <div class="owl-item-img">
+        <img src="images/banner1.jpg" alt="">
+    </div>
+    <div class="owl-item-img">
+        <img src="images/banner2.jpg" alt="">
+    </div>
+    <div class="owl-item-img">
+        <img src="images/banner3.jpg" alt="">
     </div>
 </div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
