--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -113,6 +113,11 @@
         <img src="images/banner3.jpg" alt="">
     </div>
 </div>
+<div class="container">
+    <div class="title-page">
+        <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
+    </div>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
