--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -117,6 +117,72 @@
     <div class="title-page">
         <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
     </div>
+    <div class="goods-block-main">
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good1.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">МУЖСКИЕ СТРИЖКИ</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good2.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">ЖЕНСКИЕ СТРИЖКИ</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good3.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">МАКИЯЖ</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good4.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">МАНИКЮР</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good5.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good6.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">ДЕПИЛЯЦИЯ</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good7.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">МАССАЖ</a>
+            </div>
+        </div>
+        <div class="goods-block-item">
+            <div class="goods-main-img">
+                <a href="#"><img src="images/good8.jpg" alt=""></a>
+            </div>
+            <div class="good-main-link">
+                <a href="#">СОЛЯРИЙ</a>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
