--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -183,6 +183,9 @@
             </div>
         </div>
     </div>
+    <div class="button-center">
+        <a href="#" class="fancy-btn">СМОТРЕТЬ ВСЕ</a>
+    </div>
 </div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
