--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -187,6 +187,20 @@
         <a href="#" class="fancy-btn">СМОТРЕТЬ ВСЕ</a>
     </div>
 </div>
+<div class="background-image-block">
+    <div class="overlay-block"></div>
+    <div class="container">
+        <h3>У Лица так много граней</h3>
+        <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в двух шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти услугу, которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса, богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
+        <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки, делают прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят выпрямление и лечение волос, создают великолепные завивки.</p>
+        <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для рук и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
+        <p><span class="underline--magical"><b>Косметический кабинет</b></span> предоставляет огромное количество услуг по уходу за лицом и телом. Здесь есть процедуры аппаратной косметологии, обертывания, пилинги и уходы, инъекционная мезотерапия, биоэпиляция, несколько видов массажа. Здесь же оказывают услуги по визажу, оформляют брови и ресницы, делают татуаж, пирсинг, есть процедура косметического отбеливания зубов.</p>
+        <p><span class="underline--magical"><b>Солярий</b></span> поможет создать летнее настроение, придать коже красивый отдохнувший загорелый вид даже среди глубокой зимы, или промозглой осенью.</p>
+        <div class="button-center">
+            <a href="#" class="fancy-btn">ПОДРОБНЕЕ</a>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
