--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -8,6 +8,7 @@
     <title>Лица | Салон красоты</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/owl.theme.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
@@ -190,7 +191,7 @@
 <div class="background-image-block">
     <div class="overlay-block"></div>
     <div class="container">
-        <h3>У Лица так много граней</h3>
+        <h3><span class="underline--magical">У ЛИЦА ТАК МНОГО ГРАНЕЙ</span></h3>
         <p><span class="underline--magical"><b>Салон красоты Лица</b></span> находится в самом центре города в двух шагах от Сенной площади по адресу Спасский пер. 3. Это настоящая фабрика красоты, трудно найти услугу, которой здесь не оказывают: для клиентов имеется парикмахерский зал, студия ногтевого сервиса, богатейшие косметические программы, татуаж, солярий, СПА, отбеливание зубов и многое другое.</p>
         <p>В <span class="underline--magical"><b>парикмахерском зале</b></span> выполняют стрижки, укладки, делают прически и окрашивание в полном соответствии с модными и современными тенденциями, проводят выпрямление и лечение волос, создают великолепные завивки.</p>
         <p><span class="underline--magical"><b>Ногтевой сервис</b></span> предлагает маникюр и педикюр в классическом, европейском, аппаратном исполнении, наращивание и укрепление ногтей, спа-процедуры для рук и ног, декоративные покрытия с применением средств OPI, CND, Shellac.</p>
@@ -199,6 +200,37 @@
         <div class="button-center">
             <a href="#" class="fancy-btn">ПОДРОБНЕЕ</a>
         </div>
+    </div>
+</div>
+<div class="container">
+    <div class="title-page">
+        <h2>МЫ В INSTAGRAM</h2>
+    </div>
+    <div class="button-center">
+        <a href="https://www.instagram.com/salon_litsa_spb/" class="fancy-btn" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> ПОДПИСАТЬСЯ</a>
+    </div>
+    <div class="gallery-grid">
+        <figure class="gallery__item gallery__item--1">
+            <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt="" class="gallery__img"></a>
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+            <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt="" class="gallery__img"></a>
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+            <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt="" class="gallery__img"></a>
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+            <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt="" class="gallery__img"></a>
+        </figure>
+        <figure class="gallery__item gallery__item--5">
+            <a href="images/about.jpg" data-fancybox="gallery"><img src="images/about.jpg" alt="" class="gallery__img"></a>
+        </figure>
+        <figure class="gallery__item gallery__item--6">
+            <a href="images/about2.jpg" data-fancybox="gallery"><img src="images/about2.jpg" alt="" class="gallery__img"></a>
+        </figure>
+    </div>
+    <div class="button-center">
+        <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" class="fancy-btn"><i class="fa fa-instagram" aria-hidden="true"></i> БОЛЬШЕ ФОТО</a>
     </div>
 </div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -273,6 +305,7 @@
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
 <script src="js/owl.carousel.js"></script>
