--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -233,6 +233,72 @@
         <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" class="fancy-btn"><i class="fa fa-instagram" aria-hidden="true"></i> БОЛЬШЕ ФОТО</a>
     </div>
 </div>
+<div class="main-map-block">
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A431ed2f9b0765e3ab35658d50c9ec8053407b6141ec3d2c9019413583e2483d7&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+    <div class="container order-map-relative">
+        <div class="map-order-send">
+            <div class="map-order-forms">
+                <h3>ОТПРАВИТЬ ЗАЯВКУ</h3>
+                <input type="text" name="name" placeholder="Ваше имя">
+                <input type="text" name="phone" placeholder="Телефон">
+                <select class="form-control" name="service">
+                    <option>Выберите услугу</option>
+                    <option>Мужские стрижки</option>
+                    <option>Женские стрижки</option>
+                    <option>Макияж</option>
+                    <option>Маникюр</option>
+                    <option>Эстетическая Косметология</option>
+                    <option>Депиляция</option>
+                    <option>Массаж</option>
+                    <option>Солярий</option>
+                    <option>Коррекция бровей машинкой</option>
+                    <option>Педикюр</option>
+                    <option>Пирсинг</option>
+                    <option>Детские стрижки</option>
+                    <option>Мужская модельная стрижка</option>
+                    <option>Инъекционная косметология</option>
+                    <option>Наращивание ресниц</option>
+                    <option>Аппаратная косметология</option>
+                    <option>Депиляция усов, верхней губы (шугаринг-воск)</option>
+                    <option>Депиляция подмышек (шугаринг-воск)</option>
+                    <option>Перманентный макияж</option>
+                    <option>Абонемент в солярий</option>
+                    <option>Прокол ушей Система System 75</option>
+                    <option>Короткие женские стрижки</option>
+                    <option>Пикси женская стрижка</option>
+                    <option>Средние женские стрижки</option>
+                    <option>Каре женская стрижка</option>
+                    <option>Лесенка женская стрижка</option>
+                    <option>Рисунок, узор, линии на голове (Hair Tatoo)</option>
+                    <option>Мужская депиляция волос на лице (Воск Italwax)</option>
+                    <option>Пилинги</option>
+                    <option>Поверхностные пилинги</option>
+                    <option>Салициловый пилинг</option>
+                    <option>Миндальный пилинг</option>
+                    <option>Гликолевый пилинг</option>
+                    <option>Карбоновый пилинг</option>
+                    <option>Каскад женская стрижка</option>
+                    <option>Ультразвуковой пилинг (чистка лица)</option>
+                    <option>Пилинг Alpfa Complex от Holy Land</option>
+                    <option>Желтый пилинг</option>
+                    <option>Пилинг ТСА</option>
+                    <option>Пилинг PRX-T33</option>
+                    <option>Татуаж Бровей (перманентный макияж)</option>
+                    <option>Татуаж Губ (Перманентный макияж)</option>
+                    <option>Татуаж межресничной стрелки (перманентный макияж)</option>
+                    <option>Лучший салон красоты в Центре Санкт-Петербурга</option>
+                    <option>Удаление татуажа - перманентного макияжа</option>
+                    <option>Протезирование ногтей</option>
+                    <option>Установка корректирующей скобы (3TO)</option>
+                    <option>Длинные женские стрижки</option>
+                    <option>Выпрямление волос</option>
+                    <option>Химическое выпрямление волос</option>
+                </select>
+                <button class="fancy-btn">ЗАПИСАТЬСЯ</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
