--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -299,6 +299,20 @@
         </div>
     </div>
 </div>
+<div class="grey-line-page">
+    <div class="container">
+        <div class="flex-sale-cart-block">
+            <div class="shares-cart-block-text">
+                <h3>Получите постоянную скидку</h3>
+                <div class="big-pencent-shares">5%</div>
+                <a href="#" class="fancy-btn">ПОЛУЧИТЬ КАРТУ</a>
+            </div>
+            <div class="shares-image-block">
+                <img src="images/shares.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
