--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -313,6 +313,75 @@
         </div>
     </div>
 </div>
+<footer class="footer-page">
+    <div class="container">
+        <div class="footer-flex-block">
+            <div class="footer-logo">
+                <a href="/">
+                    <img src="images/logo-footer.png" alt="">
+                </a>
+            </div>
+            <div class="footer-links">
+                <a href="#">Стрижка и укладка</a>
+                <a href="#">Косметология</a>
+                <a href="#">Макияж</a>
+                <a href="#">Маникюр</a>
+                <a href="#">Педикюр</a>
+                <a href="#">SPA</a>
+                <a href="#">Эпиляция</a>
+                <a href="#">Массаж</a>
+                <a href="#">Солярий</a>
+                <a href="#">Инъекционная косметология</a>
+            </div>
+            <div class="footer-links">
+
+                <a href="#">О салоне</a>
+                <a href="#">Услуги</a>
+                <a href="#">Цены</a>
+                <a href="#">Блог</a>
+                <a href="#">Акции</a>
+                <a href="#">Мастера</a>
+                <a href="#">Цены</a>
+            </div>
+            <div class="footer-links footer-pay-time">
+                <img src="images/time-white.png" alt="" class="footer-time">
+                <div class="footer-time-text"><b>Мы работаем</b><br>
+                ежедневно с 10:00 до 21:00</div>
+            </div>
+            <div class="footer-address">
+                <div class="footer-address-item">
+                    <a href="mailto:salon.litsa@gmail.com" title="Написать письмо">
+                        <i class="fa fa-envelope"></i><span>salon.litsa@gmail.com</span>
+                    </a>
+                </div>
+                <div class="footer-address-item">
+                    <a href="tel:88125702831"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 570-28-31</a>
+                </div>
+                <div class="footer-address-item">
+                    <a href="tel:88125702831"><i class="fa fa-phone" aria-hidden="true"></i> 8 (812) 570-28-31</a>
+                </div>
+                <div class="footer-address-item social-block">
+                    <a href="https://www.instagram.com/salon_litsa_spb" target="_blank" title="Мы в Instagram">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://vk.com/litsa_spb" target="_blank" title="Мы ВКонтакте">
+                        <i class="fa fa-vk" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.facebook.com/Litsaspb/" target="_blank" title="Мы в Facebook">
+                        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://twitter.com/SalonLitsa" target="_blank" title="Мы в Twitter">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        Разработано <a href="https://tetris-studio.ru" target="_blank">Tetris Studio</a>
+    </div>
+</footer>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
