--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -378,6 +378,9 @@
             </div>
         </div>
     </div>
+    <div class="footer-copyright footer-copyright-big">
+        <i class="fa fa-copyright" aria-hidden="true"></i> Лица, 2016-2020
+    </div>
     <div class="footer-copyright">
         Разработано <a href="https://tetris-studio.ru" target="_blank">Tetris Studio</a>
     </div>
