--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -30,7 +30,7 @@
             <div class="header-address-block">
                 <div class="header-address">
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-                    <span>САНКТ-ПЕТЕРБУРГ, СПАССКИЙ ПЕРЕУЛОК ДОМ 3</span>
+                    <a href="#">САНКТ-ПЕТЕРБУРГ, СПАССКИЙ ПЕРЕУЛОК ДОМ 3</a>
                 </div>
                 <div class="header-time">
                     <div class="header-time-img">
@@ -343,10 +343,15 @@
                 <a href="#">Мастера</a>
                 <a href="#">Цены</a>
             </div>
-            <div class="footer-links footer-pay-time">
-                <img src="images/time-white.png" alt="" class="footer-time">
-                <div class="footer-time-text"><b>Мы работаем</b><br>
-                ежедневно с 10:00 до 21:00</div>
+            <div class="footer-feedback-time">
+                <div class="footer-links footer-pay-time">
+                    <img src="images/time-white.png" alt="" class="footer-time">
+                    <div class="footer-time-text"><b>Мы работаем</b><br>
+                    ежедневно с 10:00 до 21:00</div>
+                </div>
+                <div class="btn-footer-feedback">
+                    <a href="#" class="fancy-btn">ОТЗЫВЫ</a>
+                </div>
             </div>
             <div class="footer-address">
                 <div class="footer-address-item">
