--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -204,10 +204,57 @@
 </div>
 <div class="container">
     <div class="title-page">
-        <h2>МЫ В INSTAGRAM</h2>
+        <h2>СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ</h2>
+    </div>
+    <div class="owl-shares">
+        <div class="owl-shares-item">
+            <div class="owl-shares-img">
+                <img src="images/shares1.jpg" alt="">
+            </div>
+            <div class="owl-shares-desk">
+                СДЕЛАЙ ОКРАШИВАНИЕ И ПОЛУЧИ ЛЮБОЕ SPA ДЛЯ ВОЛОС ЗА 50%
+            </div>
+        </div>
+        <div class="owl-shares-item">
+            <div class="owl-shares-img">
+                <img src="images/shares2.jpg" alt="">
+            </div>
+            <div class="owl-shares-desk">
+                ПОДАРОЧНЫЕ СЕРТИФИКАТЫ НА 3000, 5000 И 10000 РУБЛЕЙ
+            </div>
+        </div>
+        <div class="owl-shares-item">
+            <div class="owl-shares-img">
+                <img src="images/shares3.jpg" alt="">
+            </div>
+            <div class="owl-shares-desk">
+                МЕНЮ ПОДАРКОВ
+            </div>
+        </div>
+        <div class="owl-shares-item">
+            <div class="owl-shares-img">
+                <img src="images/shares4.jpg" alt="">
+            </div>
+            <div class="owl-shares-desk">
+                КУРС ИЗ 10 ПРОЦЕДУР LPG ЗА 12 000 РУБЛЕЙ -> ПЕРВЫЙ ВИЗИТ 999
+            </div>
+        </div>
+        <div class="owl-shares-item">
+            <div class="owl-shares-img">
+                <img src="images/shares5.jpeg" alt="">
+            </div>
+            <div class="owl-shares-desk">
+                8 МАРТА В ЛИЦАХ
+            </div>
+        </div>
     </div>
     <div class="button-center">
-        <a href="https://www.instagram.com/salon_litsa_spb/" class="fancy-btn" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> ПОДПИСАТЬСЯ</a>
+        <a href="#" class="fancy-btn" target="_blank">СМОТРЕТЬ ВСЕ</a>
+    </div>
+</div>
+<div class="container">
+    <div class="title-page">
+        <h2>МЫ В INSTAGRAM</h2>
     </div>
     <div class="gallery-grid">
         <figure class="gallery__item gallery__item--1">
