--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -437,6 +437,9 @@
         Разработано <a href="https://tetris-studio.ru" target="_blank">Tetris Studio</a>
     </div>
 </footer>
+<div id="button-up" title="Вверх!">
+    <span></span>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
