--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <span class="pages__href">services.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="service.html" target="_blank">
                 <span class="pages__name">Услуга</span>
                 <span class="pages__href">service.html</span>
