--- a/services.html
+++ b/services.html
@@ -104,13 +104,13 @@
     </div>
 </div>
 <div class="container">
-    <div class="title-page">
-        <h1>УСЛУГИ</h1>
-    </div>
     <ul class="breadcrumb">
         <li><a class="link" href="#">Главная</a></li>
         <li class="active">Услуги</li>
     </ul>
+    <div class="title-page">
+        <h1>УСЛУГИ</h1>
+    </div>
     <div class="goods-block-main">
         <div class="goods-block-item">
             <div class="goods-main-img">
@@ -272,6 +272,9 @@
         Разработано <a href="https://tetris-studio.ru" target="_blank">Tetris Studio</a>
     </div>
 </footer>
+<div id="button-up" title="Вверх!">
+    <span></span>
+</div>
 <div class="modal fade" id="modal-call" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
