--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <span class="pages__href">blog-page.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="shares.html" target="_blank">
                 <span class="pages__name">Акции</span>
                 <span class="pages__href">shares.html</span>
