--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <span class="pages__href">blog.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
+        <li class="pages__item pages__item_orange">
             <a href="blog-page.html" target="_blank">
                 <span class="pages__name">Блог страница</span>
                 <span class="pages__href">blog-page.html</span>
