--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <span class="pages__href">service.html</span>
             </a>
         </li>
-        <li class="pages__item pages__item_red">
-            <a href="baked-rolls.html" target="_blank">
+        <li class="pages__item pages__item_orange">
+            <a href="prices.html" target="_blank">
                 <span class="pages__name">Цены</span>
                 <span class="pages__href">prices.html</span>
             </a>
@@ -55,7 +55,7 @@
         </li>
         <li class="pages__item pages__item_red">
             <a href="online.html" target="_blank">
-                <span class="pages__name">Онлайн-запись</span>
+                <span class="pages__name">Онлайн-запись (Это сторонний модуль, менять в нём ничего не будем)</span>
                 <span class="pages__href">online.html</span>
             </a>
         </li>
