--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -122,6 +122,9 @@
     <div class="title-page main-page-title">
         <h1>ЛИЦА | САЛОН КРАСОТЫ</h1>
     </div>
+    <div class="button-center">
+        <a href="#" class="fancy-btn">О НАС</a>
+    </div>
 </div>
 <div class="container">
     
