--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -408,7 +408,7 @@
                     class="fa fa-instagram" aria-hidden="true"></i> БОЛЬШЕ ФОТО</a>
         </div>
         <div class="title-page">
-            <h2>ОТЗЫВЫ</h2>
+            <h2>О НАС ГОВОРЯТ</h2>
         </div>
         <div class="feedback-carousel">
             <div class="feedback-carousel-item">
