--- a/litsa-spb.html
+++ b/litsa-spb.html
@@ -442,7 +442,7 @@
         </div>
 
         <div class="title-page">
-            <h2>МЫ В INSTAGRAM</h2>
+            <h2>ЭТО ВАШ САЛОН КРАСОТЫ</h2>
         </div>
         <div class="gallery-grid">
             <figure class="gallery__item gallery__item--1">
