--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                     <span class="pages__href">online.html</span>
                 </a>
             </li>
+            <li class="pages__item pages__item_red">
+                <a href="masters.html" target="_blank">
+                    <span class="pages__name">Мастера</span>
+                    <span class="pages__href">masters.html</span>
+                </a>
+            </li>
         </ul>
     </div>
     <style>
